[package]
name = "antichess-tb-sys"
version = "0.1.0" # remember to update html_root_url
links = "antichesstb"
description = "Low level bindings for antichess-tb-api"
repository = "https://github.com/niklasf/antichess-tb-sys"
readme = "README.md"
license = "GPL-3.0+ AND GPL-2.0 AND Zlib"
categories = ["external-ffi-bindings", "games"]
keywords = ["chess", "antichess", "tablebase"]
edition = "2021"

[build-dependencies]
bindgen = { version = "0.69.4", default-features = false, features = ["logging", "runtime"] }
cc = "1.1.6"
tap = "1.0.1"

[dev-dependencies]
shakmaty = "0.27.1"

