[package]
name = "antichess-tb-sys"
version = "0.1.2" # remember to update html_root_url
links = "antichess_tb"
description = "Low level bindings for antichess-tb-api"
repository = "https://github.com/niklasf/rust-antichess-tb-sys"
license = "GPL-3.0+ AND GPL-2.0 AND Zlib"
categories = ["external-ffi-bindings", "games"]
keywords = ["chess", "antichess", "tablebase"]
exclude = ["an0/*.an0"]
edition = "2024"

[build-dependencies]
bindgen = "0.72.1"
cc = "1.1.6"
tap = "1.0.1"

[dev-dependencies]
shakmaty = "0.30.0"

[dependencies]
libz-sys = { version = "1.1.18", features = ["static"] }
